--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">NMediaApp</string>
     <string name="nmedia">NMedia!</string>
+    <string name="content_description_user_avatar">User avatar</string>
+    <string name="content_description_menu_button">Menu button</string>
+    <string name="content_description_like_image_button">Icon Number of likes</string>
+    <string name="content_description_share_image_button">Icon Number of share</string>
+    <string name="icon_number_of_views">Icon Number of views</string>
 </resources>
