--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,4 +6,5 @@
     <string name="content_description_like_image_button">Иконка количество лайков</string>
     <string name="content_description_share_image_button">Иконка поличество репостов</string>
     <string name="icon_number_of_views">Иконка количество просмотров</string>
+    <string name="string_post_remove">Удалить</string>
 </resources>
