--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,4 +7,7 @@
     <string name="content_description_share_image_button">Иконка поличество репостов</string>
     <string name="icon_number_of_views">Иконка количество просмотров</string>
     <string name="string_post_remove">Удалить</string>
+    <string name="button_accept">Кнопка принять</string>
+    <string name="post_text">Текст статьи</string>
+    <string name="toast_not_content">Введите текст</string>
 </resources>
