--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="content_description_share_image_button">Icon Number of share</string>
     <string name="icon_number_of_views">Icon Number of views</string>
     <string name="string_post_remove">Remove</string>
+    <string name="button_accept">Button accept</string>
+    <string name="post_text">Post text</string>
+    <string name="toast_not_content">Content can\'t be empty</string>
 </resources>
