ДЗ 2.4. CRUD: списки, добавление, удаление, изменение. Задача Отмена редактирования.

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,4 +11,7 @@
     <string name="post_text">Текст статьи</string>
     <string name="toast_not_content">Введите текст</string>
     <string name="string_post_edit">Редактировать</string>
+    <string name="icon_edit">Иконка редактировать</string>
+    <string name="edit_post">Редактировать</string>
+    <string name="edit_button">Кнопка отмены редактирования</string>
 </resources>
