--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="edit_post">Edit post</string>
     <string name="edit_button">Cancel edit button</string>
     <string name="content_description_add_post_button">Add post button</string>
+    <string name="cd_play_image_button">Play video</string>
 </resources>
